Fix issue with github link alignment

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -120,6 +120,7 @@ a {
 
 .navbar-nav {
   display: flex;
+  width: 100%;
 }
 
 .navbar-item {
